--- a/esperanto.tex
+++ b/esperanto.tex
@@ -4,7 +4,7 @@ Esperanto (Chinese: 世界語 \pinyin{Shìjièyǔ}, lit. `world language') is a 
 This chapter describes the origins of the language, the life story of its creator, the development of the Esperanto movement, and the state of the Esperanto movement to date.
 
 \section{The life of Ludwik Lejzer Zamenhof}
-Ludwik Lejzer Zamenhof was born Leyzer Zamengov (Лейзеръ Заменгов\noteonrussian{}) on December 15th, 1859, in the city of Białystok, Congress Poland, Russian Empire (present-day Białystok, Poland).
+Ludwik Lejzer Zamenhof was born Leyzer Zamengov ({\cyrfont Лейзеръ Заменгов\noteonrussian{}}) on December 15th, 1859, in the city of Białystok, Congress Poland, Russian Empire (present-day Białystok, Poland).
 At the time, the city was ethnically and linguistically diverse, and was inhabited by Jews, Russians, Poles, and Germans.
 Each and all of these nations spoke their own language.
 The Jewish majority spoke Yiddish, a peculiar amalgam of High German mixed with Hebrew, Aramaic, and Slavic languages.
@@ -31,7 +31,7 @@ the suffix \textit{-anto} indicating the gerund form, analogous to such Latin wo
 \section{First appearance of Esperanto}
 The language authored by Zamenhof was first described in a book published in the Russian language in 1887 in Warsaw.
 The first book in its Russian edition was titled \textit{Mezhdunarodnyy Yazyk. Predisloviye i polnyy uchebnik.}
-(Между\-на\-род\-ный Языкъ. Предисловие и полный учебникъ `The International Language. Introduction and Complete Textbook').
+({\cyrfont Между\-на\-род\-ный Языкъ. Предисловие и полный учебникъ `The International Language. Introduction and Complete Textbook'}).
 This book has subsequently been translated into English, Polish, German, and French.
 The book contained a basic course of Zamenhof's constructed language together with a brief dictionary and is commonly referred to as \textit{The First Book} (Esperanto: \textit{Unua Libro}).
 In the book, Zamenhof postulated the need for an international auxilliary language that could connect people from different cultural and language backgrounds.
