Add paragraph about Quo vadis from Gau 2014

--- a/esperanto.tex
+++ b/esperanto.tex
@@ -96,7 +96,16 @@ Translations have been an important part of the Esperanto movement ever from its
 Zamenhof's first translation into Esperanto was \textit{The Battle of Life: A Love Story} by Charles Dickens (Esperanto: \textit{La Batalo de l' Vivo}), which had not been published in book form until 1910.
 His next translation was Shakespeare's \textit{Hamlet}, published in Esperanto under the title \textit{Hamleto. Reĝido de Danujo} (`Hamlet. Prince of Denmark').
 Both translations were indirect translations from German-language editions
-(Kökény and Bleier 1933: 1054).
+(Kökény and Bleier, 1933, p. 1054).
+
+Esperanto has been used as an intermediate language for translations of some works of Polish literature, most notably the novel \textit{Quo Vadis} by the Nobel Prize-winning author Henryk Sienkiewicz.
+The novel, placed in ancient Rome under the rule of Emperor Nero, deals with the persecution of early Christians in the Roman Empire.
+To this day, \textit{Quo vadis} has been translated into more than 50 languages, including two direct translations into Chinese.
+However, before the work had been translated into Chinese directly from the Polish original, several indirect translations have emerged, based on English, French, Japanese, and Esperanto editions.
+The Esperanto translation was first published in 1933
+(Gau, 2014, pp. 19--20).
+
+% 域外小說集、周作人
 
 % The first published book written directly in Esperanto was Zamenhof's \textit{Foundation of Esperanto}.
 According to Benczik (1979), Esperanto is regarded by most of its users as a good language for translation.
@@ -139,14 +148,14 @@ Sikosek (2003) estimates the number of speakers of Esperanto at a maximum of 40,
 
 Esperanto is actively spoken not only by L2 speakers, but quite often also by their bilingual or multilingual offspring.
 In Esperanto, native speakers of Esperanto are referred to as \textit{denaskuloj} (from \textit{denask-} `from birth' and \textit{ulo} `person, individual') or \textit{denaskaj Esperantistoj} (`Esperantist from birth')
-(Britannica 2019a).
+(Britannica, 2019a).
 
 There are numerous websites and organizations that are actively promoting Esperanto and providing Esperanto learning resources free of charge.
 Notable examples of such websites include Lernu.net\footnote{\url{https://lernu.net/en}, retrieved March 23th, 2020.}, offering online courses for self-study, e-books, and an electronic dictionary, dedicated exclusively to Esperanto; and Duolingo\footnote{\url{https://www.duolingo.com/course/eo/en/Learn-Esperanto}, retrieved March 23th, 2020.}, offering interactive courses of several languages, including Esperanto.
 
 As of September 12th, 2019, the Esperanto edition of Wikipedia, the free online encyclopedia, included 276,488 articles\footnote{\url{https://eo.m.wikipedia.org/wiki/Vikipedio_en_Esperanto}, retrieved March 23th, 2020.}.
 The 105th World Esperanto Congress (Esperanto: \textit{105-a Universala Kongreso de Esperanto}) is scheduled to take place from 1st to the 8th of August, 2020, in Montreal, Quebec, Canada\footnote{\url{https://esperanto2020.ca/en/world-esperanto-congress/}, retrieved March 23th, 2020.}.
-The 104th World Esperanto Congress took place in Lahti, Finland, and attracted 917 participants from 57 countries (Universala Esperanto-Asocio 2019).
+The 104th World Esperanto Congress took place in Lahti, Finland, and attracted 917 participants from 57 countries (Universala Esperanto-Asocio, 2019).
 
 % TODO: add the quote from 'The bridge of Words' about a silent evening
 
