--- a/references.tex
+++ b/references.tex
@@ -20,6 +20,8 @@ The Editors of Encyclopaedia Britannica. (2019). \textit{Esperanto}. In \textit{
 
 The Editors of Encyclopaedia Britannica. (2019). \textit{Eliza Orzeszkowa}. In \textit{Encyclopædia Britannica}. Retrieved March 7th, 2020, from \url{https://www.britannica.com/biography/Eliza-Orzeszkowa}.
 
+Gau H. (2014). \textit{A Study of “Quo Vadis” by Henryk Sienkiewicz in Chinese Translations}. 
+
 Gloger M. (2007). \textit{Pozytywizm: między nowoczesnością a modernizmem} [Positivism: Between Modernity and Modernism]. \textit{Pamiętnik Literacki. Czasopismo kwartalne poświęcone historii i krytyce literatury polskiej}, 2007(1). Retrieved March 7th, 2020, from \url{https://www.ceeol.com/search/article-detail?id=200994}.
 
 Kökény L. and Bleier V. (1933). \textit{Enciklopedio de Esperanto}. Retrieved March 7th, 2020, from \url{http://www.eventoj.hu/steb/gxenerala_naturscienco/enciklopedio-1/enciklopedio-de-esperanto-1933.pdf}.
