Correct original title of the novel, add info on edition numbers

--- a/introduction.tex
+++ b/introduction.tex
@@ -13,11 +13,13 @@ The novel was first published in Polish in 1873.
 Ludwik Zamenhof, the creator of Esperanto, translated the novel from the Polish original into Esperanto, and his translation was first published in 1910.
 The Chinese version was translated in May 1928 by Zhong Xianmin (鍾憲民 \nazwisko{Zhōng Xiànmín}%
 \footnote{All Chinese terms mentioned in this thesis are listed in Traditional Chinese characters, together with the \textit{Hanyu Pinyin} romanization (漢語拼音 \pinyin{Hànyǔ Pīnyīn}) with tone marks. The romanizations of common terms are set in italic type, while proper names are set in regular font.}) %
-from Zamenhof's Esperanto translation and first published in 1930 by \textit{Shanghai Beixin Shuju} (上海北新書局 \nazwisko{Shànghǎi Běixīn Shūjú}), under the title \textit{Gu yan lei} (孤雁淚 \textit{Gū yàn lèi} `The Tears of a Lonely Wild Goose')
-(Kökény and Bleier 1933: 612; Orzeszko 1948).
+from Zamenhof's Esperanto translation and first published in 1930 by \textit{Shanghai Beixin Shuju} (上海北新書局 \nazwisko{Shànghǎi Běixīn Shūjú}), originally under the title \textit{Marta} (馬爾達 \pinyin{Mǎ'ěrdá}).
+The translation used for analysis in this thesis bears the title \textit{Gu yan lei} (孤雁淚 \pinyin{Gū yàn lèi} `The Tears of a Lonely Wild Goose') and is referred to in the introduction as the fourth edition.
+The introduction mentions a fifth edition in the making, however as of this writing, the Author does not know if the endeavor had ever been fulfilled, especially considering the turmoil of the Chinese Civil War and the subsequent proclamation of the People's Republic of China
+(Kökény and Bleier, 1933, p. 612; Orzeszko, 1948).
 
 As of this writing, none of the translations is easily available in retail or in libraries, therefore for the purposes of this research, digitalised versions will be used.
-The Esperanto translation has been published on the websites of several Esperanto associations and in general, it is relatively easy to obtain.
+The Esperanto translation has been published on the websites of several Esperanto associations and as a work of public domain, it is relatively easy to obtain.
 The Chinese edition has long gone out of print, it is however available through the electronic library system of the National Taiwan Normal University.
 The edition available in the system is dated 1948 and was published by \textit{Guoji Wenhua Fuwu She} (國際文化服務社 \pinyin{Guójì Wénhuà Fúwù shè} `International Society for Cultural Services').
 It is not entirely clear where the Chinese edition had been published, as the title page names three offices of the society, in Shanghai (上海 \toponim{Shànghǎi}), Beiping (北平 \toponim{Běipíng}, present-day Beijing 北京 \toponim{Běijīng}), and Nanjing (南京 \toponim{Nánjīng}), respectively.
