Add more info on the introduction

--- a/introduction.tex
+++ b/introduction.tex
@@ -18,6 +18,8 @@ The translation used for analysis in this thesis bears the title \textit{Gu yan 
 The introduction mentions a fifth edition in the making, however as of this writing, the Author does not know if the endeavor had ever been fulfilled, especially considering the turmoil of the Chinese Civil War and the subsequent proclamation of the People's Republic of China
 (Kökény and Bleier, 1933, p. 612; Orzeszko, 1948).
 
+% TODO: Add more about all of the editions
+
 As of this writing, none of the translations is easily available in retail or in libraries, therefore for the purposes of this research, digitalised versions will be used.
 The Esperanto translation has been published on the websites of several Esperanto associations and as a work of public domain, it is relatively easy to obtain.
 The Chinese edition has long gone out of print, it is however available through the electronic library system of the National Taiwan Normal University.
