--- a/chapter_four.tex
+++ b/chapter_four.tex
@@ -1,26 +1,39 @@
+%%% Local Variables:
+%%% TeX-master: "main"
+%%% TeX-command-default "LaTeX"
+%%% End:
+
 \chapter{Comparison of \textit{Marta} in Polish and Esperanto}
 
 This chapter makes an attempt to describe the contents of the Polish original of the novel \textit{Marta} and compare it with Ludwik Zamenhof's Esperanto translation.
 In the process, it should be possible to identify parts of the translation where equivalence could not be achieved and try to describe the way Zamenhof dealt with these issues in the process of his translation work.
 
-\section{Introduction}
+\section{Analysis of the introduction}
 
-The novel \textit{Marta} begins with an introduction, describing the importance of love in the life of a woman.
-The introduction precedes the life story of the protagonist, Marta Świcka.
+The novel \textit{Marta} begins with an introductory monologue, describing the importance of love in the life of a woman.
+% The introduction precedes the life story of the protagonist, Marta Świcka.
 The introduction is written from the point of view of a third-person omniscient narrator.
 It is not clear whether the narrator can be identified with the author of the novel, however, the opinions presented in the introduction can be interpreted as belonging to the author.
 In this section, the narrator takes issue with the novel \textit{Albina} by Mr. Jan Zachariasiewicz (1825--1906).
 Zachariasiewicz is attributed with stating that the reason women suffer, either on the moral or the physical level, is because they lack true love for a man, and that for a woman, the act of marriage is always motivated by pure calculation.
-The narrator considers this statement to be unjust and argues that the whole existence of a woman is built around the concept of love: Starting from early childhood, young girls yearn to grow up and have the honor to meet their destined life partner.
-In some cases, their wishes are granted, and they end up marrying a man at the church and living happily ever after.
-In many other cases, something along the way goes wrong and the woman has to live a life of suffering, hunger.
+The narrator considers this statement to be unjust and argues that the whole existence of a woman is built around the concept of love:
+Starting from early childhood, young girls yearn to grow up and have the honor to meet their destined life partner.
+In some cases, their wishes are granted, and they end up marrying a man they love at the church and living happily ever after.
+In many other cases, something along the way goes wrong and the woman has to live a sinful life of suffering and hunger.
 
-Zamenhof managed to translate the introduction with a high degree of equivalence.
-However, the original is written in a lofty, complicated style that was somewhat simplified in the translation.
+In the source text, the introduction is written in a lofty, poetic style with archaic wording.
+Zamenhof managed to translate the introduction with a high degree of equivalence, and to some extent made the translation easier to understand than the original.
+
+% Syntactic parallelism
 
 Życie kobiety to wiecznie gorejący płomień miłości --- powiadają \textbf{jedni}.
 Życie kobiety to zaparcie się --- twierdzą \textbf{inni}.
 Życie kobiety to macierzyństwo --- wołają \textbf{tamci}.
 Życie kobiety to igraszka --- żartują \textbf{inni jeszcze}.
 
-La vivo de virino estas eterne brulanta flamo de amo, diras \textbf{unuj}. La vivo de virino estas sinoferado, certigas \textbf{aliaj}. La vivo de virino estas patrineco, krias \textbf{parto da homoj}. La vivo de virino estas amuzi\^gado, \^sercas \textbf{aliaj}.
+La vivo de virino estas eterne brulanta flamo de amo, diras \textbf{unuj}. La vivo de virino estas sinoferado, certigas \textbf{aliaj}. La vivo de virino estas patrineco, krias \textbf{parto da homoj}. La vivo de virino estas amuziĝado, ŝercas \textbf{aliaj}.
+
+\section{Analysis of chapter one}
+
+The first chapter of the novel describes the beginning of a new phase in the life of the protagonist, Marta Świcka, following the death of her husband.
+Mrs. Świcka, having lost her only source of income, is compelled to move out of an apartment in Graniczna street, in what is nowadays the scrict center of Warsaw.
