Expand analysis of chapter one

--- a/chapter_four.tex
+++ b/chapter_four.tex
@@ -36,4 +36,41 @@ La vivo de virino estas eterne brulanta flamo de amo, diras \textbf{unuj}. La vi
 \section{Analysis of chapter one}
 
 The first chapter of the novel describes the beginning of a new phase in the life of the protagonist, Marta Świcka, following the death of her husband.
-Mrs. Świcka, having lost her only source of income, is compelled to move out of an apartment in Graniczna street, in what is nowadays the scrict center of Warsaw.
+Mrs. Świcka, having lost her only source of income, is compelled to move out of a lush, comfortable apartment in Graniczna street, in what is nowadays the strict center of Warsaw, and take care of her four-year-old daughter.
+This section of the novel presents the circumstances in which the protagonist leaves the apartment, surrounded not by friends or family, but by porters in dusty boots, moving expensive furniture out of the building, and taking with them the last remnants of a life the family could no longer afford.
+
+An important detail of the translation apparent from this section of the translation is that the name of the street Graniczna, (as well as all other street names throughout the Esperanto edition), is left in the original Polish spelling, meaningless to a reader not versed in any Slavic language. % TODO
+Apart from that, throughout this section the translator managed to preserve both the precise meaning of most of the words and their literary value, rendering the translated text easy to read and understand.
+
+--- Mamo! --- szepnęła dziewczynka --- patrz! biurko ojca!
+
+--- Panjo! --- mallaŭte diris la knabineto, --- la skribtablo de la patro!
+
+Znać było, że przedmioty te, z którymi \textbf{rozstawała się widocznie}, posiadały dla niej nie tylko materialną cenę;
+
+Oni povis rimarki, ke tiuj objektoj, kiuj \textbf{videble estis forprenataj de ŝi}, havis por ŝi valoron ne sole materialan;
+
+In the whole section, the Polish verb \textit{szeptać} (`to whisper') is always translated into Esperanto as \textit{mallaŭte paroli} (`to speak quietly').
+Both expressions convey similar meaning and though not fully equivalent, this change is unlikely to result in mistranslations in the Chinese text.
+
+Po biurku ukazał się na dziedzińcu ładny kralowski fortepian, ale kobieta w żałobie obojętniej już za nim wzrokiem powiodła.
+
+Post la skribtablo aperis sur la korto bela fortepiano, sed la virino en funebra vesto akompanis ĝin jam per rigardo pli indiferenta.
+
+The expression \textit{kralowski fortepian} (`a grand piano made by the company Krall i Seider') has been translated as \textit{bela fortepiano} (`a beautiful grand piano'), omitting the indication of origin altogether.
+The said company was a popular maker of pianofortes in Poland during the life and times of Orzeszkowa, but the company name was unlikely to be recognized abroad.
+Therefore, the omission seems reasonable and was not likely to result in mistranslations.
+
+--- Łóżeczko moje, mamo! --- zawołała dziewczynka --- ludzie ci i łóżeczko moje zabierają, i tę kołderkę, którąś mi sama zrobiła! \textbf{Ja nie chcę, aby oni to zabierali!} Odbierz, mamo, od nich łóżeczko moje i kołderkę.
+
+--- Mia liteto, panjo! --- ekkriis la knabineto --- tiuj homoj forprenas ankaŭ mian liteton, kaj ankaû tiun kovrileton, kiun vi mem al mi faris! Reprenu, panjo, de ili mian liteton kaj la kovrileton.
+
+In this fragment, the sentence \textit{Ja nie chcę, aby oni to zabierali!} (I do not want them to take it away) is omitted altogether.
+
+--- Dziękuję ci, \textbf{Zosiu} --- rzekła cicho --- byłaś dla mnie bardzo dobrą.
+
+--- Mi dankas vin, \textbf{Sonjo}, ŝi diris mallaŭte, --- vi estis por mi tre bona.
+
+In the source text, the protagonist refers to her former servant using the name ``Zosia,'' which is a diminutive form of the name Zofia.
+Although there is no clear rule regarding diminutive names in Esperanto, Zamenhof nativized the name as ``Sonjo.''
+This may be the Esperanto variant of the name ``Sonja,'' which is the most common diminutive form of the analogous name ``Sofia'' in the Russian language.
