Add more content to chapter four

--- a/chapter_four.tex
+++ b/chapter_four.tex
@@ -35,12 +35,13 @@ La vivo de virino estas eterne brulanta flamo de amo, diras \textbf{unuj}. La vi
 
 \section{Analysis of chapter one}
 
-The first chapter of the novel describes the beginning of a new phase in the life of the protagonist, Marta Świcka, following the death of her husband.
-Mrs. Świcka, having lost her only source of income, is compelled to move out of a lush, comfortable apartment in Graniczna street, in what is nowadays the strict center of Warsaw, and take care of her four-year-old daughter.
-This section of the novel presents the circumstances in which the protagonist leaves the apartment, surrounded not by friends or family, but by porters in dusty boots, moving expensive furniture out of the building, and taking with them the last remnants of a life the family could no longer afford.
+The first chapter of the novel describes the beginning of a new phase in the life of the protagonist, Marta Świcka and her daughter, Janina, following the death of her husband, Janina's father.
+Mrs. Świcka, having lost her only supporter, is compelled to move out of a lush, comfortable apartment in Graniczna street, in what is nowadays the strict center of Warsaw, into a single room in the attic of an edifice in Piwna street.
+The loss also meant that the woman, who had never worked for money in her life, would need to find a job to support herself and her four-year-old daughter, an endeavor which would bring about her demise.
+This chapter presents the circumstances in which the protagonists leaves their old apartment, surrounded not by friends or family, but by porters in ominous dusty boots, moving expensive furniture out of the building, taking away the last remnants of a life the impoverished family could no longer afford.
 
-An important detail of the translation apparent from this section of the translation is that the name of the street Graniczna, (as well as all other street names throughout the Esperanto edition), is left in the original Polish spelling, meaningless to a reader not versed in any Slavic language. % TODO
-Apart from that, throughout this section the translator managed to preserve both the precise meaning of most of the words and their literary value, rendering the translated text easy to read and understand.
+An important detail of the translation apparent from this section of the translation is that the names of streets in Warsaw: Graniczna and Piwna, are left in their original Polish spelling, meaningless to a reader not versed in any Slavic language. % TODO
+Apart from that, throughout this part of the text, the translator managed to preserve both the precise meaning of most of the words and their literary value, rendering the translated text easy to read and understand.
 
 --- Mamo! --- szepnęła dziewczynka --- patrz! biurko ojca!
 
@@ -67,10 +68,26 @@ Therefore, the omission seems reasonable and was not likely to result in mistran
 
 In this fragment, the sentence \textit{Ja nie chcę, aby oni to zabierali!} (I do not want them to take it away) is omitted altogether.
 
+The parting words the protagonist exchanged with her servant maiden were described as follows:
+
 --- Dziękuję ci, \textbf{Zosiu} --- rzekła cicho --- byłaś dla mnie bardzo dobrą.
+
+--- Pani to byłaś zawsze dobrą dla mnie --- zawołała dziewczyna --- służyłam u pani cztery lata i nigdzie nie było mi i nie będzie już lepiej jak u pani.
 
 --- Mi dankas vin, \textbf{Sonjo}, ŝi diris mallaŭte, --- vi estis por mi tre bona.
 
-In the source text, the protagonist refers to her former servant using the name ``Zosia,'' which is a diminutive form of the name Zofia.
-Although there is no clear rule regarding diminutive names in Esperanto, Zamenhof nativized the name as ``Sonjo.''
-This may be the Esperanto variant of the name ``Sonja,'' which is the most common diminutive form of the analogous name ``Sofia'' in the Russian language.
+--- Sinjorino, vi ĉiam estis bona por mi, --- ekkriis la knabino, --- mi servis ĉe vi kvar jarojn, kaj nenie estis al mi nek iam estos pli bone, ol ĉe vi.
+
+``Thank you, Sophie,'' she said quietly, ``you have been very good to me.''
+
+``Milady, you have always been good to me,'' cried the maiden, ``I have served you for four years, and nowhere has ever been, nowhere will ever be better than with you.''
+
+In the source text, the protagonist calls the maiden ``Zosia,'' which is a diminutive form of the name Zofia.
+Although there is no clear rule regarding diminutive names in Esperanto, Zamenhof nativized the name as ``Sonjo,'' which is the Esperanto spelling of ``Sonja,'' the diminutive form of the Russian name ``Sofia.''
+
+The words uttered by Zosia in response contain grammatical mistakes, which is not surprising in the language of uneducated people.
+When using the honorific form \textit{Pani} (`Milady; Mistress; Madam'), the verb should be conjugated using third person singular (\textit{Pani była}).
+However, the maiden uses the second person singular (\textit{Pani byłaś}).
+In comparisons, the conjunction \textit{niż} (`than') should be used rather than \textit{jak} (`as').
+This is considered incorrect by the rules of Polish formal grammar and to this day remains an astonishingly common mistake in everyday language.
+However, the grammatical rules of Esperanto are few and simple; there are no honorifics and all conjugations are regular, therefore it is simply not possible to say anything in bad grammar in Esperanto without altering the meaning.
