--- a/titlepage.tex
+++ b/titlepage.tex
@@ -19,11 +19,11 @@
     \vspace{2cm plus 1.5fill}
     {\large 指導老師：賴慈芸博士}\par
     \vspace{0.5em}
-    {\large Advisor: Dr. Lai Tzu-yun}\par
+    {\large Advisor: Dr. Tzu-Yun Lai}\par
     \vspace{2cm}
-    {\large 中華民國一〇九年十二月}\par
+    {\large 高雄市，\zhtoday}\par
     \vspace{0.5em}
-    {\large Taipei, \@date}
+    {\large Kaohsiung, \@date}
   \end{center}
   % \@thanks
 \end{titlepage}%
