Use displayquote environment

--- a/chapter_four.tex
+++ b/chapter_four.tex
@@ -1,8 +1,3 @@
-%%% Local Variables:
-%%% TeX-master: "main"
-%%% TeX-command-default "LaTeX"
-%%% End:
-
 \chapter{Comparison of \textit{Marta} in Polish and Esperanto}
 
 This chapter makes an attempt to describe the contents of the Polish original of the novel \textit{Marta} and compare it with Ludwik Zamenhof's Esperanto translation.
@@ -26,12 +21,16 @@ Zamenhof managed to translate the introduction with a high degree of equivalence
 
 % Syntactic parallelism
 
-Życie kobiety to wiecznie gorejący płomień miłości --- powiadają \textbf{jedni}.
-Życie kobiety to zaparcie się --- twierdzą \textbf{inni}.
-Życie kobiety to macierzyństwo --- wołają \textbf{tamci}.
-Życie kobiety to igraszka --- żartują \textbf{inni jeszcze}.
+\begin{displayquote}
+  Życie kobiety to wiecznie gorejący płomień miłości --- powiadają \textbf{jedni}.
+  Życie kobiety to zaparcie się --- twierdzą \textbf{inni}.
+  Życie kobiety to macierzyństwo --- wołają \textbf{tamci}.
+  Życie kobiety to igraszka --- żartują \textbf{inni jeszcze}.
+\end{displayquote}
 
-La vivo de virino estas eterne brulanta flamo de amo, diras \textbf{unuj}. La vivo de virino estas sinoferado, certigas \textbf{aliaj}. La vivo de virino estas patrineco, krias \textbf{parto da homoj}. La vivo de virino estas amuziĝado, ŝercas \textbf{aliaj}.
+\begin{displayquote}
+  La vivo de virino estas eterne brulanta flamo de amo, diras \textbf{unuj}. La vivo de virino estas sinoferado, certigas \textbf{aliaj}. La vivo de virino estas patrineco, krias \textbf{parto da homoj}. La vivo de virino estas amuziĝado, ŝercas \textbf{aliaj}.
+\end{displayquote}
 
 \section{Analysis of chapter one}
 
