--- a/chapter_three.tex
+++ b/chapter_three.tex
@@ -55,10 +55,11 @@ Following the failed uprising, in December 1864, Mr. Orzeszko was arrested and s
 Deprived of her husband's estate, Eliza had no other choice than to return to her father's house in Milkowszczyzna.
 Eliza has thus described her impressions from returning to her hometown:
 
-\longquote{%
+\begin{displayquote}
   I went out to the world in a carriage padded with blue damask and drawn by seven horses. I was accompanied by servants shining with coat of arms plaques\ldots{} At the age of twenty, I returned from those distant places all alone, to the house I have inherited from my father, only to find it looted by soldiers who had stayed in the household; [I had to pay] debts taken by other people and a tribute % kontrybucja
-so enormous that even [our] fields of wheat would bend under its burden; various officials would frequently visit and overstay\ldots{} The situation was completely overwhelming\ldots{}%
-\footnote{Shastouski, Orzeszkowa, 2000, pp. 7--8.}}
+  so enormous that even [our] fields of wheat would bend under its burden; various officials would frequently visit and overstay\ldots{} The situation was completely overwhelming\ldots{}%
+\footnote{Shastouski, Orzeszkowa, 2000, pp. 7--8.}
+\end{displayquote}
 
 Eliza was not the only one to suffer in the new reality.
 Following the failure of the January Uprising and the abolishment of serfdom in the Russian Empire, many families in Lithuania%
