--- a/esperanto.tex
+++ b/esperanto.tex
@@ -162,11 +162,11 @@ The 104th World Esperanto Congress took place in Lahti, Finland, and attracted 9
 Arika Okrent, the author of a book on the topic of constructed languages, is generally critical of most of the constructed language projects she has researched.
 Nevertheless, in an interview with Jason Zesky (2009), she acknowledged the ease of communication that the speakers of Esperanto managed to attain:
 
-\longquote{%
+\begin{displayquote}
   {\bfseries Jason Zesky: I understand you've been to several invented language conferences. What do people do at these conferences?}
 
   Arika Okrent: At the Esperanto conference I attended, more than I expected. I thought it would be a lot of play acting, like [in a singsong voice], ``Hello. How are you? I am fine.'' But they were speaking fluently, and with a little bit of study I could understand what was going on. % There was also a lot of Victorian rigmarole because Esperanto was a turn of the [20th] century phenomenon they have retained all these old rituals. They have a flag passing ceremony and the reading of greetings from various Esperanto clubs—even a show and piano recitals.%
-}
+\end{displayquote}
 
 \section{Summary}
 From all of the above, we can conclude that although the language has definitely not made its way into the mainstream, it is far from dead, and has a substantial following around the world.
