--- a/chapter_four.tex
+++ b/chapter_four.tex
@@ -34,59 +34,116 @@ Zamenhof managed to translate the introduction with a high degree of equivalence
 
 \section{Analysis of chapter one}
 
-The first chapter of the novel describes the beginning of a new phase in the life of the protagonist, Marta Świcka and her daughter, Janina, following the death of her husband, Janina's father.
-Mrs. Świcka, having lost her only supporter, is compelled to move out of a lush, comfortable apartment in Graniczna street, in what is nowadays the strict center of Warsaw, into a single room in the attic of an edifice in Piwna street.
-The loss also meant that the woman, who had never worked for money in her life, would need to find a job to support herself and her four-year-old daughter, an endeavor which would bring about her demise.
-This chapter presents the circumstances in which the protagonists leaves their old apartment, surrounded not by friends or family, but by porters in ominous dusty boots, moving expensive furniture out of the building, taking away the last remnants of a life the impoverished family could no longer afford.
+The first chapter of the novel describes the beginning of a new phase in the life of the protagonist, Marta Świcka and her daughter, Janina, following the death of Marta's husband.
 
-An important detail of the translation apparent from this section of the translation is that the names of streets in Warsaw: Graniczna and Piwna, are left in their original Polish spelling, meaningless to a reader not versed in any Slavic language. % TODO
-Apart from that, throughout this part of the text, the translator managed to preserve both the precise meaning of most of the words and their literary value, rendering the translated text easy to read and understand.
+\subsection{Summary of the plot of chapter one}
+Mrs. Świcka, having lost her only supporter, is compelled to move out of a comfortable apartment in Graniczna street---right next to a Baroque public park called Saxon Garden---into a single small room in the attic of an edifice in Piwna street, in the Old Town.
+The woman, who has never worked for money in her life, needs to find a job to support herself and her four-year-old daughter.
+
+The chapter starts by presenting the circumstances in which the protagonists leaves their old apartment, surrounded by porters moving expensive furniture out of the building, taking away the last remnants of a life that the impoverished family could no longer afford.
+After all furniture and belongings have been taken away, the protagonist, Mrs. Świcka, goes to her new rented room, accompanied by her former servant girl, Zofia, which has to leave her for her new masters.
+The chapter continues with a description of the protagonist's nightly errand to buy food for her child, in an atmosphere of fear and uncertainty.
+It is the first time when she needs to go outside on her own at night.
+Afraid to leave, she encounters two people, the caretaker of her edifice, and a woman whom she guessed to be the caretaker's wife.
+She pleads both of them to run the errand for her, but both refuse, seeing the widow's bad financial condition.
+
+Then follows a brief biography of the protagonist preceding the beginning of the first chapter.
+Born to a family of gentry and married to a low-ranking government official by the name Jan Świcki, she lost first her mother, then her father, and finally her husband.
+During her husband's disease, Marta had to spend most of their money and sell off her jewellery to pay for medical costs, which turned out to be useless.
+
+On the next day of the removal, Marta goes to the office of a tutoring broker in an attempt to apply for a job.
+At the office, she encounters an English woman and a French woman.
+Both are offered very well-paid jobs as governesses staying at the residences of wealthy counts, with very good working conditions.
+The French woman is even allowed to live with her little niece.
+The broker admits that the French woman does not possess any particular teaching qualifications, but has the benefit of being a foreigner.
+After a brief interview with the broker, a middle-aged lady, she finds out that she has little hope of finding a teaching job and staying together with her daughter; she could, however, get a decently paid job if she agreed to leave the child to stay with someone else.
+Not willing to part with her daughter, Marta offers to provide entry-level classes in such subjects as geography, history, Polish literature, and drawing.
+She finds out that she cannot teach these subjects, as they are taught almost exclusively by men.
+The broker admonishes Marta that in their society, the only way a woman could earn a decent living with her work is by attaining mastery in a highly demanded skill, such as a foreign language or music; any elementary skills are not enough to secure a carefree existence.
+
+\subsection{Analysis of the language of the Esperanto translation}
+
+In this part of the translation, Zamenhof managed to preserve both the precise meaning of most of the words and their literary value. The text is easy to read and understand for a reader versed in Esperanto.
+
+An important detail of the translation apparent from this section of the translation is that the names of streets in Warsaw: Graniczna and Piwna, are left in their original Polish spelling, meaningless to a reader not versed in any Slavic language. % TODO: Are all of them left in Polish?
 
 --- Mamo! --- szepnęła dziewczynka --- patrz! biurko ojca!
 
 --- Panjo! --- mallaŭte diris la knabineto, --- la skribtablo de la patro!
 
+\begin{displayquote}
 Znać było, że przedmioty te, z którymi \textbf{rozstawała się widocznie}, posiadały dla niej nie tylko materialną cenę;
+\end{displayquote}
 
+\begin{displayquote}
 Oni povis rimarki, ke tiuj objektoj, kiuj \textbf{videble estis forprenataj de ŝi}, havis por ŝi valoron ne sole materialan;
+\end{displayquote}
 
 In the whole section, the Polish verb \textit{szeptać} (`to whisper') is always translated into Esperanto as \textit{mallaŭte paroli} (`to speak quietly').
 Both expressions convey similar meaning and though not fully equivalent, this change is unlikely to result in mistranslations in the Chinese text.
 
-Po biurku ukazał się na dziedzińcu ładny kralowski fortepian, ale kobieta w żałobie obojętniej już za nim wzrokiem powiodła.
+\subsection{Omissions}
 
-Post la skribtablo aperis sur la korto bela fortepiano, sed la virino en funebra vesto akompanis ĝin jam per rigardo pli indiferenta.
+Certain sentences or words in the source text were omitted in the translation.
+This sentence describes the grand piano that Marta had to sell:
 
-The expression \textit{kralowski fortepian} (`a grand piano made by the company Krall i Seider') has been translated as \textit{bela fortepiano} (`a beautiful grand piano'), omitting the indication of origin altogether.
+\begin{displayquote}
+Po biurku ukazał się na dziedzińcu \textbf{ładny kralowski fortepian}, ale kobieta w żałobie obojętniej już za nim wzrokiem powiodła.
+\end{displayquote}
+
+In the translation, the expression \textit{ładny kralowski fortepian} (`a good-looking grand piano made by the company Krall \& Seider') has been translated as \textit{bela fortepiano} (`a beautiful grand piano'), omitting the indication of origin altogether:
+
+\begin{displayquote}
+Post la skribtablo aperis sur la korto \textbf{bela fortepiano}, sed la virino en funebra vesto akompanis ĝin jam per rigardo pli indiferenta.
+\end{displayquote}
+
 The said company was a popular maker of pianofortes in Poland during the life and times of Orzeszkowa, but the company name was unlikely to be recognized abroad.
 Therefore, the omission seems reasonable and was not likely to result in mistranslations.
 
+When Marta's daughter notices her bed being taken away, she shouts out in dismay:
+
+\begin{displayquote}
 --- Łóżeczko moje, mamo! --- zawołała dziewczynka --- ludzie ci i łóżeczko moje zabierają, i tę kołderkę, którąś mi sama zrobiła! \textbf{Ja nie chcę, aby oni to zabierali!} Odbierz, mamo, od nich łóżeczko moje i kołderkę.
+\end{displayquote}
 
---- Mia liteto, panjo! --- ekkriis la knabineto --- tiuj homoj forprenas ankaŭ mian liteton, kaj ankaû tiun kovrileton, kiun vi mem al mi faris! Reprenu, panjo, de ili mian liteton kaj la kovrileton.
+In the translation, the sentence \textit{Ja nie chcę, aby oni to zabierali!} (I do not want them to take it away) is omitted altogether:
 
-In this fragment, the sentence \textit{Ja nie chcę, aby oni to zabierali!} (I do not want them to take it away) is omitted altogether.
+\begin{displayquote}
+--- Mia liteto, panjo! --- ekkriis la knabineto --- tiuj homoj forprenas ankaŭ mian liteton, kaj ankaŭ tiun kovrileton, kiun vi mem al mi faris! Reprenu, panjo, de ili mian liteton kaj la kovrileton.
+\end{displayquote}
 
-The parting words the protagonist exchanged with her servant maiden were described as follows:
+\subsection{Nativization of given names, archaisms, and bad grammar}
 
+Let us take a look at the parting words that the protagonist, Marta, exchanged with her servant girl, Zosia:
+
+\begin{displayquote}
 --- Dziękuję ci, \textbf{Zosiu} --- rzekła cicho --- byłaś dla mnie bardzo dobrą.
 
---- Pani to byłaś zawsze dobrą dla mnie --- zawołała dziewczyna --- służyłam u pani cztery lata i nigdzie nie było mi i nie będzie już lepiej jak u pani.
+--- \textbf{Pani} to \textbf{byłaś} zawsze dobrą dla mnie --- zawołała dziewczyna --- służyłam u pani cztery lata i nigdzie nie było mi i nie będzie już \textbf{lepiej jak u pani}.
+\end{displayquote}
 
+These words were thus rendered in the Esperanto translation:
+
+\begin{displayquote}
 --- Mi dankas vin, \textbf{Sonjo}, ŝi diris mallaŭte, --- vi estis por mi tre bona.
 
---- Sinjorino, vi ĉiam estis bona por mi, --- ekkriis la knabino, --- mi servis ĉe vi kvar jarojn, kaj nenie estis al mi nek iam estos pli bone, ol ĉe vi.
-
-``Thank you, Sophie,'' she said quietly, ``you have been very good to me.''
-
-``Milady, you have always been good to me,'' cried the maiden, ``I have served you for four years, and nowhere has ever been, nowhere will ever be better than with you.''
+--- Sinjorino, \textbf{vi} ĉiam \textbf{estis} bona por mi, --- ekkriis la knabino, --- mi servis ĉe vi kvar jarojn, kaj nenie estis al mi nek iam estos \textbf{pli bone, ol ĉe vi}.
+\end{displayquote}
 
 In the source text, the protagonist calls the maiden ``Zosia,'' which is a diminutive form of the name Zofia.
 Although there is no clear rule regarding diminutive names in Esperanto, Zamenhof nativized the name as ``Sonjo,'' which is the Esperanto spelling of ``Sonja,'' the diminutive form of the Russian name ``Sofia.''
 
-The words uttered by Zosia in response contain grammatical mistakes, which is not surprising in the language of uneducated people.
-When using the honorific form \textit{Pani} (`Milady; Mistress; Madam'), the verb should be conjugated using third person singular (\textit{Pani była}).
-However, the maiden uses the second person singular (\textit{Pani byłaś}).
-In comparisons, the conjunction \textit{niż} (`than') should be used rather than \textit{jak} (`as').
-This is considered incorrect by the rules of Polish formal grammar and to this day remains an astonishingly common mistake in everyday language.
-However, the grammatical rules of Esperanto are few and simple; there are no honorifics and all conjugations are regular, therefore it is simply not possible to say anything in bad grammar in Esperanto without altering the meaning.
+% ``Thank you, Sophie,'' she said quietly, ``you have been very good to me.''
+
+% ``Milady, you have always been good to me,'' cried the maiden, ``I have served you for four years, and nowhere has ever been, nowhere will ever be better than with you.''
+
+Another thing worth noticing in this fragment, as well as many other places throughout the source text, is that the dialogues contain archaic forms and grammar that would be considered incorrect in modern Polish. % Znaleźć źródło!
+For instance, according to the rules of modern Polish grammar, when using the honorific form \textit{Pani} (`Milady; Mistress; Madam') or \textit{Pan} (`Sir; Mister'), the verb should be conjugated in the third person singular form (as in: \textit{Pani była}).
+In the source text, however, the second person singular is used (\textit{Pani byłaś}).
+Zosia, the maiden, uses the conjunction % sprawdzić, co to za część mowy
+\textit{jak} (`as; how') in comparisons (\textit{lepiej jak u pani}), rather than \textit{niż} (`than', as in: \textit{lepiej, niż u pani}).
+This is a colloquialism considered incorrect by formal grammar and very common to this day in the spoken language. % źródło
+However, the grammatical rules of Esperanto are few and simple; there is no honorific verb form, and all conjugations take exactly the same form, regardless of the grammatical person.
+In Esperanto, it is simply not possible to translate anything with bad grammar without altering the meaning of a sentence.
+Therefore the translation fails to convey the grammatical mistakes occuring in the speech of the servant girl.
+Bad grammar and archaisms, however, do not convey meaning on their own, therefore the Author thinks it safe to assume that the translation of this fragments still achieves a high degree of equivalence.
