--- a/chapter_four.tex
+++ b/chapter_four.tex
@@ -15,57 +15,57 @@ The narrator considers this statement to be unjust and argues that the whole exi
 Starting from early childhood, young girls yearn to grow up and have the honor to meet their destined life partner.
 In some cases, their wishes are granted, and they end up marrying a man they love at the church and living happily ever after.
 In many other cases, something along the way goes wrong and the woman has to live a sinful life of suffering and hunger.
+This introduction makes ground for the story of Marta Świcka, whose life goes astray in a lot of ways.
 
 In the source text, the introduction is written in a lofty, poetic style with archaic wording.
-Zamenhof managed to translate the introduction with a high degree of equivalence, and to some extent made the translation easier to understand than the original.
+Zamenhof managed to translate the introduction with a high degree of equivalence.
+In this part of the translation, the Author did not manage to find any deviations in meaning from the source text.
+For a modern reader versed in both Polish and Esperanto, the translation may be even easier to understand than the source text.
+This is due to the fact that the Polish language has evolved significantly over the past hundred of years, while the fundamental rules of Esperanto remained intact.
 
 % Syntactic parallelism
 
-\begin{displayquote}
-  Życie kobiety to wiecznie gorejący płomień miłości --- powiadają \textbf{jedni}.
-  Życie kobiety to zaparcie się --- twierdzą \textbf{inni}.
-  Życie kobiety to macierzyństwo --- wołają \textbf{tamci}.
-  Życie kobiety to igraszka --- żartują \textbf{inni jeszcze}.
-\end{displayquote}
+% \begin{displayquote}
+%   Życie kobiety to wiecznie gorejący płomień miłości --- powiadają \textbf{jedni}.
+%   Życie kobiety to zaparcie się --- twierdzą \textbf{inni}.
+%   Życie kobiety to macierzyństwo --- wołają \textbf{tamci}.
+%   Życie kobiety to igraszka --- żartują \textbf{inni jeszcze}.
+% \end{displayquote}
 
-\begin{displayquote}
-  La vivo de virino estas eterne brulanta flamo de amo, diras \textbf{unuj}. La vivo de virino estas sinoferado, certigas \textbf{aliaj}. La vivo de virino estas patrineco, krias \textbf{parto da homoj}. La vivo de virino estas amuziĝado, ŝercas \textbf{aliaj}.
-\end{displayquote}
+% \begin{displayquote}
+%   La vivo de virino estas eterne brulanta flamo de amo, diras \textbf{unuj}. La vivo de virino estas sinoferado, certigas \textbf{aliaj}. La vivo de virino estas patrineco, krias \textbf{parto da homoj}. La vivo de virino estas amuziĝado, ŝercas \textbf{aliaj}.
+% \end{displayquote}
 
 \section{Analysis of chapter one}
 
 The first chapter of the novel describes the beginning of a new phase in the life of the protagonist, Marta Świcka and her daughter, Janina, following the death of Marta's husband.
 
 \subsection{Summary of the plot of chapter one}
-Mrs. Świcka, having lost her only supporter, is compelled to move out of a comfortable apartment in Graniczna street---right next to a Baroque public park called Saxon Garden---into a single small room in the attic of an edifice in Piwna street, in the Old Town.
+Mrs. Świcka, having lost her only supporter, is compelled to move out of a comfortable apartment in Graniczna street---right next to a Baroque public park called Saxon Garden---into a single small room in the attic of a much humbler edifice in Piwna street, in the Old Town.
 The woman, who has never worked for money in her life, needs to find a job to support herself and her four-year-old daughter.
 
-The chapter starts by presenting the circumstances in which the protagonists leaves their old apartment, surrounded by porters moving expensive furniture out of the building, taking away the last remnants of a life that the impoverished family could no longer afford.
-After all furniture and belongings have been taken away, the protagonist, Mrs. Świcka, goes to her new rented room, accompanied by her former servant girl, Zofia, which has to leave her for her new masters.
+The chapter starts by presenting the circumstances in which the protagonist leaves her old apartment, surrounded by porters moving expensive furniture out of the building, taking away the last remnants of a life that the impoverished and incomplete family can no longer afford.
+After all furniture and belongings have been taken away, Marta goes to her new rented room.
+On the way, she is accompanied by her daughter and her former servant girl, Zofia, which subsequently leaves for her new masters' place.
+
 The chapter continues with a description of the protagonist's nightly errand to buy food for her child, in an atmosphere of fear and uncertainty.
 It is the first time when she needs to go outside on her own at night.
 Afraid to leave, she encounters two people, the caretaker of her edifice, and a woman whom she guessed to be the caretaker's wife.
-She pleads both of them to run the errand for her, but both refuse, seeing the widow's bad financial condition.
-
-Then follows a brief biography of the protagonist preceding the beginning of the first chapter.
-Born to a family of gentry and married to a low-ranking government official by the name Jan Świcki, she lost first her mother, then her father, and finally her husband.
-During her husband's disease, Marta had to spend most of their money and sell off her jewellery to pay for medical costs, which turned out to be useless.
-
-On the next day of the removal, Marta goes to the office of a tutoring broker in an attempt to apply for a job.
-At the office, she encounters an English woman and a French woman.
-Both are offered very well-paid jobs as governesses staying at the residences of wealthy counts, with very good working conditions.
-The French woman is even allowed to live with her little niece.
-The broker admits that the French woman does not possess any particular teaching qualifications, but has the benefit of being a foreigner.
-After a brief interview with the broker, a middle-aged lady, she finds out that she has little hope of finding a teaching job and staying together with her daughter; she could, however, get a decently paid job if she agreed to leave the child to stay with someone else.
-Not willing to part with her daughter, Marta offers to provide entry-level classes in such subjects as geography, history, Polish literature, and drawing.
-She finds out that she cannot teach these subjects, as they are taught almost exclusively by men.
-The broker admonishes Marta that in their society, the only way a woman could earn a decent living with her work is by attaining mastery in a highly demanded skill, such as a foreign language or music; any elementary skills are not enough to secure a carefree existence.
+She pleads both of them to run the errand for her, but both refuse, seeing the widow's poor financial condition.
+Finally, the protagonist goes to a shop to buy food, overcoming her fears.
+On the way home, she is approached by a stranger humming a frivolous song, who shouts at her to slow down and ``go for a walk'' with him.
+In spite of all the perils, she manages to return home to her daughter, make tea, and put her daughter to sleep.
+The chapter ends with the protagonist sitting at the fireplace and thinking about her new way of life.
 
 \subsection{Analysis of the language of the Esperanto translation}
 
 In this part of the translation, Zamenhof managed to preserve both the precise meaning of most of the words and their literary value. The text is easy to read and understand for a reader versed in Esperanto.
 
+There are, however, slight omissions and changes which do modify the perception of the translation.
 An important detail of the translation apparent from this section of the translation is that the names of streets in Warsaw: Graniczna and Piwna, are left in their original Polish spelling, meaningless to a reader not versed in any Slavic language. % TODO: Are all of them left in Polish?
+The name ``Graniczna'' means ``[the street] at the boundary,'' and has been rendered phonetically in the Chinese translation as Gelanazhina Street (格拉納支納街 \pinyin{Gélānàzhīnà jiē}) which not only does not convey any meaning, but is also a mispronunciation of the Polish name, which is pronounced \ipa{[ɡrãˈɲiʧ̑na]}.
+while the name ``Piwna'' means ``the beer street.''
+Although the meanings of those names do not really bring any added value to the story, one could argue that a phonetic rendition does result in a loss of meaning.
 
 --- Mamo! --- szepnęła dziewczynka --- patrz! biurko ojca!
 
@@ -147,3 +147,5 @@ However, the grammatical rules of Esperanto are few and simple; there is no hono
 In Esperanto, it is simply not possible to translate anything with bad grammar without altering the meaning of a sentence.
 Therefore the translation fails to convey the grammatical mistakes occuring in the speech of the servant girl.
 Bad grammar and archaisms, however, do not convey meaning on their own, therefore the Author thinks it safe to assume that the translation of this fragments still achieves a high degree of equivalence.
+
+\input{4b}
