Expand the summary of chapter two

--- a/4b.tex
+++ b/4b.tex
@@ -1,15 +1,27 @@
 \section{Summary of the plot of chapter two}
 
-Then follows a brief biography of the protagonist preceding the beginning of the first chapter.
-Born to a family of gentry and married to a low-ranking government official by the name Jan Świcki, she lost first her mother, then her father, and finally her husband.
-During her husband's disease, Marta had to spend most of their money and sell off her jewellery to pay for medical costs, which turned out to be useless.
+The second chapter begins with a short biography of the protagonist, providing some background on Marta's origins and her life story preceding the events described in the first chapter.
 
-On the next day of the removal, Marta goes to the office of a tutoring broker in an attempt to apply for a job.
+Marta was born to a loving family of impoverished gentry, and grew up in a relatively quiet, carefree environment.
+When she was sixteen, her mother died.
+Soon after she married a low-ranking government official by the name Jan Świcki, her father died, too.
+At the time, Marta was not particularly worried by her parents' deaths, as her husband's salary was enough to provide for the whole family.
+A few years after the birth of their only child, Jancia, Mr.\ Świcki fell ill with a disease that would bring about his demise.
+During her husband's disease, Marta spent most of their money and sold off her jewellery to pay doctors and pharmacists.
+In spite of their joint efforts, her husband's life could not be saved, and his death was the direct reason of the events described in the novel.
+
+The narrative then follows with the description of Marta's first encounter with the ruthless job market.
+On the next day after Marta's removal from the comfortable apartment in Graniczna street to the cheap attic abode in Piwna street, Marta goes to the office of, Mrs.\ Ludwika Żmińska, a tutoring broker, in an attempt to apply for a job.
 At the office, she encounters an English woman and a French woman.
-Both are offered very well-paid jobs as governesses staying at the residences of wealthy counts, with very good working conditions.
+She witnesses both women being offered very well-paid jobs as governesses staying at the residences of wealthy counts, with very good working conditions and perks.
 The French woman is even allowed to live with her little niece.
 The broker admits that the French woman does not possess any particular teaching qualifications, but has the benefit of being a foreigner.
+
 After a brief interview with the broker, a middle-aged lady, she finds out that she has little hope of finding a teaching job and staying together with her daughter; she could, however, get a decently paid job if she agreed to leave the child to stay with someone else.
 Not willing to part with her daughter, Marta offers to provide entry-level classes in such subjects as geography, history, Polish literature, and drawing.
-She finds out that she cannot teach these subjects, as they are taught almost exclusively by men.
-The broker admonishes Marta that in their society, the only way a woman could earn a decent living with her work is by attaining mastery in a highly demanded skill, such as a foreign language or music; any elementary skills are not enough to secure a carefree existence.
+However, she learns that she is not allowed to teach these subjects, as they are taught almost exclusively by men.
+Mrs.\ Żmińska admonishes Marta that in their society, the only way a woman could earn a decent living with her work is by attaining mastery in a highly demanded skill, such as a foreign language or music; any mediocre, elementary skills were not enough to secure a carefree existence.
+
+The broker, seeing Marta's dire predicament, treats her with compassion and understanding.
+She promises to do her best to help Marta find a tutoring post, while warning her that the search may take a very long time.
+The reason for the delay, she says, is that the supply of entry-level French teachers was far greater than the demand, making it very hard for mediocre tutors to find a reasonably paid, or even any post.
