Stub description of chapter three

--- a/4b.tex
+++ b/4b.tex
@@ -1,4 +1,5 @@
-\section{Summary of the plot of chapter two}
+\section{Analysis of chapter two}
+\subsection{Summary of the plot of chapter two}
 
 The second chapter begins with a short biography of the protagonist, providing some background on Marta's origins and her life story preceding the events described in the first chapter.
 
@@ -25,3 +26,8 @@ Mrs.\ Żmińska admonishes Marta that in their society, the only way a woman cou
 The broker, seeing Marta's dire predicament, treats her with compassion and understanding.
 She promises to do her best to help Marta find a tutoring post, while warning her that the search may take a very long time.
 The reason for the delay, she says, is that the supply of entry-level French teachers was far greater than the demand, making it very hard for mediocre tutors to find a reasonably paid, or even any post.
+
+The chapter ends with a description of the protagonist's bitter realization of her own low value.
+Before the meeting with Mrs.\ Żmińska, Marta had been confident that the will to work alone was enough for a woman to find a job sufficient to provide for her family.
+The encounter, however, made her realize that the will to work alone was not enough to make a living, and that she would need to try harder.
+Even so, she realized, it might take a very long time or prove impossible to actually find any job.
