--- a/chapter_four.tex
+++ b/chapter_four.tex
@@ -149,3 +149,4 @@ Therefore the translation fails to convey the grammatical mistakes occuring in t
 Bad grammar and archaisms, however, do not convey meaning on their own, therefore the Author thinks it safe to assume that the translation of this fragments still achieves a high degree of equivalence.
 
 \input{4b}
+\input{4c}
